--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,58 +1,106 @@
+    /*CSS PRESENTATION*/
+    .presentation {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      margin-top: 5px;
+    }
+    .presentation h1 {
+      color: #21b916;
+      margin-bottom: 1rem;
+    }
+    .presentation img {
+      width: 600px;
+    }
+    .description {
+      padding: 20px;
+      width:50%;
+  }
 
-
-  nav{
-    float: left;
+  /*CSS BP_CARD*/
+  .bp_card {
     display: flex;
     flex-direction: row;
     width: 100%;
-    background-color: rgba(42,45,49,1);
+    align-items: center;
+    background-color: darkgreen;
   }
 
-  .navbar-logo {
-    display: inline-block;
-    vertical-align: middle;
-    width: 90px;
+  .description-bp_card {
+    padding-left: 100px;
+    max-width: 80%;
+    color: white;
   }
 
-  .navbar-logo img{
-    display: block;
-    width: 130px;
-    height: 130px;
-    height: auto;
+  .description-bp_card h1, .description-bp_card h2 {
+    color: #21b916;
   }
 
-  nav ul {
-    list-style: none;
-    height: fit-content;
-    position: fixed;
-    right: 15px;
+  .checks {
+    align-items: center;
+    color: #21b916;
+    padding-left: 50px;
   }
 
-  .nav-link, .dropdown-item, .dropdown-menu{
-    float: left;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    color:white !important;
+  .checks-items {
+    display: flex;
+    flex-direction: row;
   }
 
-  .navbar-toggler , .navbar-toggler-icon {
-    background-color: white !important;
+  .image-bp_card {
+    padding: 20px;
+    width: 80%;
+    min-height: 300px;
+    margin-top: 20px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
-  .navbar-toggler:hover{
-    border-width: 1px !important;
-    border-color: #21b916 !important;
-  }
+    /*CSS SEMICIRCLES*/
+    .semicircles-container {
+      position: relative;
+      width: 100%;
+      height: 150px;
+      display: flex;
+      justify-content: center;
+    }
 
-  .navbar-nav {
-    padding: 5px;
-    background-color: rgba(42,45,49,1) !important ;
-  }
+    .semicircle {
+      transform: rotate(180deg);
+      position: absolute;
+      bottom: 0;
+      border-bottom-left-radius: 50%;
+      border-bottom-right-radius: 50%;
 
-  .nav-link:hover,.dropdown-item:hover  {
-    color: #36b920 !important;
-    background-color: rgba(42,45,49,1) !important;
-  }
-  .dropdown-menu {
-    background-color: rgba(42,45,49,1) !important;
-  }
+    }
+
+    .semicircle-down {
+      position: absolute;
+      top: 0;
+      border-bottom-left-radius: 50%;
+      border-bottom-right-radius: 50%;
+    }
+
+    .first {
+      background-color: darkgreen;
+      z-index: 3;
+      width: 100%;
+      height: 50px;
+    }
+
+    .second {
+      background-color: green;
+      z-index: 2;
+      width: 100%;
+      height: 80px;
+    }
+
+    .third {
+      background-color: #21b916;
+      z-index: 1;
+      width: 100%;
+      height: 100px;
+    }
