--- a/src/app/social/social.component.scss
+++ b/src/app/social/social.component.scss
@@ -38,3 +38,11 @@ ul#floating-share-buttons a {
 ul#floating-share-buttons a:hover {
   width:4.5rem;
 }
+
+#floating-share-buttons {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  z-index: 4;
+}
