Versión 5. Añadido registro y logueo de usuarios junto con header para usuarios logueados

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -29,7 +29,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-primary text-white" routerLink="/iniciar-sesion">MiArea</a>
+          <a class="nav-link text-primary text-white" routerLink="/sign-in">MiArea</a>
         </li>
       </ul>
     </div>
