Versión 5.1. Acoran-Santiago. Añadidos paginas de que hacemos y reserva de taller, junto con varios componentes, servicios e interfaces

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link active" routerLink="/" >Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/quehacemos">¿Qué hacemos?</a>
+          <a class="nav-link " routerLink="/what-we-do">¿Qué hacemos?</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="/tienda">Tienda</a>
@@ -25,7 +25,7 @@
           </a>
           <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/tienda-taller">Productos</a></li>
-            <li><a class="dropdown-item" routerLink="/servicios-taller">Servicios</a></li>
+            <li><a class="dropdown-item" routerLink="/workshop-service">Servicios</a></li>
           </ul>
         </li>
         <li class="nav-item">
