Versión 7. Agregando routerlink al header de sesión iniciada

--- a/src/app/what-we-do/what-we-do.page.html
+++ b/src/app/what-we-do/what-we-do.page.html
@@ -2,7 +2,7 @@
 
   <header class="shadow-lg" id="header">
     <app-header *ngIf="!userService.isLoggedIn" class="shadow-lg" id="header"></app-header>
-    <!--<app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>-->
+    <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>
   </header>
   <app-social id="social"></app-social>
   <main>
