--- a/src/app/header-log/header-log.component.html
+++ b/src/app/header-log/header-log.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-logo" href="#">
-      <img class="logo" src="../assets/img/LOGO.png">
+      <img class="logo" src="../assets/LOGO.png">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +13,7 @@
           <a class="nav-link active" aria-current="page" routerLink="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/quehacemos">¿Qué hacemos?</a>
+          <a class="nav-link " routerLink="/what-we-do">¿Qué hacemos?</a>
         </li>
         <li class="nav-item">
           <a class="nav-link " routerLink="/tienda">Tienda</a>
@@ -25,7 +25,7 @@
           </a>
           <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" routerLink="/tienda-taller">Productos</a></li>
-            <li><a class="dropdown-item" routerLink="/servicios-taller">Servicios</a></li>
+            <li><a class="dropdown-item" routerLink="/workshop-service">Servicios</a></li>
           </ul>
         </li>
         <li style="display: flex;align-items: center;" class="nav-item">
