Versión 8. Home y Qué hacemos terminado

--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -2,18 +2,18 @@
   <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="true">
     <div class="carousel-indicators"></div>
     <div class="carousel-inner">
-      <div>
-        <div>
+      <div *ngFor="let imagen of imagenes; let i = index"[ngClass]="{'carousel-item': true,'active': i === imagenActivaIndex}"[style.backgroundImage]="'url(' + imagen + ')'">
+        <div [ngClass]="{'carouselBackground': true, 'active': i === imagenActivaIndex}" [style.backgroundImage]="'url(' + imagen + ')'">
 
         </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button"
+    <button (click)="cambiarImagenActiva(-1)" class="carousel-control-prev" type="button"
             data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button"
+    <button (click)="cambiarImagenActiva(1)" class="carousel-control-next" type="button"
             data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
