Versión 9. Añadiendo Tienda

--- a/src/app/header-log/header-log.component.html
+++ b/src/app/header-log/header-log.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link " routerLink="/what-we-do">¿Qué hacemos?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/tienda">Tienda</a>
+          <a class="nav-link " routerLink="/store">Tienda</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-primary text-white" href="#" id="navbarDropdown"
