--- a/src/global.scss
+++ b/src/global.scss
@@ -11,7 +11,7 @@
 
  /*OVERFLOW-Y DE LAS PAGINAS*/
 
-app-home, app-what-we-do, app-workshop-service{
+app-home, app-what-we-do, app-workshop-service, app-store {
   overflow-y: scroll !important;
 }
 
