--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
         <li class="nav-item">
-          <a class="nav-link active" routerLink="/" >Inicio</a>
+          <a class="nav-link active" (click)="navigationLink('')">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/what-we-do">¿Qué hacemos?</a>
+          <a class="nav-link " (click)="navigationLink('what-we-do')">¿Qué hacemos?</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " routerLink="/store">Tienda</a>
+          <a class="nav-link " (click)="navigationLink('store')">Tienda</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle text-primary text-white" href="#" id="navbarDropdown" role="button"
@@ -24,8 +24,8 @@
             Taller
           </a>
           <ul class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" routerLink="/tienda-taller">Productos</a></li>
-            <li><a class="dropdown-item" routerLink="/workshop-service">Servicios</a></li>
+            <li><a class="dropdown-item" (click)="navigationLink('workshop-store')">Productos</a></li>
+            <li><a class="dropdown-item" (click)="navigationLink('workshop-service')">Servicios</a></li>
           </ul>
         </li>
         <li class="nav-item">
