--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,142 +1,145 @@
-<body>
-  <header class="shadow-lg">
-    <app-header *ngIf="!userService.isLoggedIn" class="shadow-lg" id="header"></app-header>
-    <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>
-  </header>
-
-  <app-social></app-social>
-
-  <main>
-
-    <app-carousel></app-carousel>
-
-    <div class="presentation">
-      <div class="description">
-        <h1>Presentación</h1>
-        <p class="p-justify" [innerHTML]="textoPresentacion?.Texto"></p>
+<ion-content scrollY="true">
+  <body>
+    <header class="shadow-lg">
+      <app-header *ngIf="!userService.isLoggedIn" class="shadow-lg" id="header"></app-header>
+      <app-header-log *ngIf="userService.isLoggedIn" class="shadow-lg" ></app-header-log>
+    </header>
+  
+    <app-social></app-social>
+  
+    <main>
+  
+      <app-carousel></app-carousel>
+  
+      <div class="presentation">
+        <div class="description">
+          <h1>Presentación</h1>
+          <p class="p-justify" [innerHTML]="textoPresentacion?.Texto"></p>
+        </div>
+        <img src="https://www.estacionbpsantabrigida.com/uploads/BzH8nN2Q/IMG_20201206_234737.jpg" alt="">
       </div>
-      <img src="https://www.estacionbpsantabrigida.com/uploads/BzH8nN2Q/IMG_20201206_234737.jpg" alt="">
-    </div>
-
-    <div class="semicircles-container">
-      <div class="semicircle first"></div>
-      <div class="semicircle second"></div>
-      <div class="semicircle third"></div>
-    </div>
-
-    <div class="bp_card">
-      <div class="description-bp_card">
-        <h1>Premiamos tu fidelidad</h1>
-        <p class="p-justify">Un lugar increíble en el que podrás conseguir las mejores ofertas y regalos. Para
-          hacerlo,
-          sólo tendrás que presentar tu tarjeta Mi BP cada vez que repostes, conseguirás automáticamente un
-          punto por
-          cada litro de carburante.
-        </p>
-        <div class="checks">
-          <div class="checks-items">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-check" viewBox="0 0 16 16">
-              <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
-                  1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-            </svg>
-            <p>Catálogo</p>
-          </div>
-
-          <div class="checks-items">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-check" viewBox="0 0 16 16">
-              <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
-                  1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-            </svg>
-            <p>Ahorro</p>
-          </div>
-
-          <div class="checks-items">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-check" viewBox="0 0 16 16">
-              <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
-                  1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-            </svg>
-            <p>Privilegios</p>
-          </div>
-
-          <div class="checks-items">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-check" viewBox="0 0 16 16">
-              <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
-                  1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
-            </svg>
-            <p>Colaboradores</p>
-          </div>
-        </div>
-        <h2>¡ASÍ DE FÁCIL!</h2>
-        <div class="btn-color">
-          <a class="btn" href="https://mibp.es/es/welcome/como-funciona">¡Accede a Mi BP!</a>
-        </div>
+  
+      <div class="semicircles-container">
+        <div class="semicircle first"></div>
+        <div class="semicircle second"></div>
+        <div class="semicircle third"></div>
       </div>
-      <div class="image-bp_card">
-        <img class="image-bp_card" src="{{bpUrl}}">
-      </div>
-    </div>
-
-    <div class="semicircles-container">
-      <div class="semicircle-down third"></div>
-      <div class="semicircle-down second"></div>
-      <div class="semicircle-down first"></div>
-    </div>
-
-    <div class="ubication">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3521.8037833546045!2d-15.501768784579735!3d28.
-          030472417823443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc4096cd375e4c51%3A0x49f99925c6d5640d!2sGasolinera
-          %20BP%20Santa%20Br%C3%ADgida!5e0!3m2!1ses!2ses!4v1678303396842!5m2!1ses!2ses" width="600" height="450"
-              style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-      <div class="description-ubication">
-        <div class="dato-icono">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-               class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
-            <path
-              d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
-          </svg>
-          <a href="https://www.google.com/maps/dir//Gasolinera+BP+Santa+Br%C3%ADgida+C.+Casta%C3%B1o+Bajo,+10,+BAJO+
-              35300+Sta+Br%C3%ADgida+Las+Palmas/@28.0304677,-15.4995801,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0xc4096cd375e4c51
-              :0x49f99925c6d5640d!2m2!1d-15.4995801!2d28.0304677">Dirección: Calle Castaño Bajo, 10, 35300, Santa Brígida
-            Las Palmas
-          </a>
+  
+      <div class="bp_card">
+        <div class="description-bp_card">
+          <h1>Premiamos tu fidelidad</h1>
+          <p class="p-justify">Un lugar increíble en el que podrás conseguir las mejores ofertas y regalos. Para
+            hacerlo,
+            sólo tendrás que presentar tu tarjeta Mi BP cada vez que repostes, conseguirás automáticamente un
+            punto por
+            cada litro de carburante.
+          </p>
+          <div class="checks">
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                   class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
+                    1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
+              </svg>
+              <p>Catálogo</p>
+            </div>
+  
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                   class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
+                    1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
+              </svg>
+              <p>Ahorro</p>
+            </div>
+  
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                   class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
+                    1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
+              </svg>
+              <p>Privilegios</p>
+            </div>
+  
+            <div class="checks-items">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                   class="bi bi-check" viewBox="0 0 16 16">
+                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1
+                    1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z" />
+              </svg>
+              <p>Colaboradores</p>
+            </div>
+          </div>
+          <h2>¡ASÍ DE FÁCIL!</h2>
+          <div class="btn-color">
+            <a class="btn" href="https://mibp.es/es/welcome/como-funciona">¡Accede a Mi BP!</a>
+          </div>
         </div>
-        <div class="dato-icono">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-               class="bi bi-telephone-fill" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315
-                1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0
-                1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634
-                18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-          </svg>
-          <a href="tel:928-641-276">Teléfono: 928641276</a>
-        </div>
-        <div class="dato-icono">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-               class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
-            <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0
-                11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49
-                4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482
-                4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z" />
-            <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503
-                0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4
-                 1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0
-                 .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0
-                 1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438
-                 16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0
-                 .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z" />
-          </svg>
-          <a href="mailto:info@estacionbpsantabrigida.com">E-MAIL: info@estacionbpsantabrigida.com</a>
+        <div class="image-bp_card">
+          <img class="image-bp_card" src="{{bpUrl}}">
         </div>
       </div>
+  
+      <div class="semicircles-container">
+        <div class="semicircle-down third"></div>
+        <div class="semicircle-down second"></div>
+        <div class="semicircle-down first"></div>
+      </div>
+  
+      <div class="ubication">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3521.8037833546045!2d-15.501768784579735!3d28.
+            030472417823443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc4096cd375e4c51%3A0x49f99925c6d5640d!2sGasolinera
+            %20BP%20Santa%20Br%C3%ADgida!5e0!3m2!1ses!2ses!4v1678303396842!5m2!1ses!2ses" width="600" height="450"
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+        <div class="description-ubication">
+          <div class="dato-icono">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+              <path
+                d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+            </svg>
+            <a href="https://www.google.com/maps/dir//Gasolinera+BP+Santa+Br%C3%ADgida+C.+Casta%C3%B1o+Bajo,+10,+BAJO+
+                35300+Sta+Br%C3%ADgida+Las+Palmas/@28.0304677,-15.4995801,16z/data=!4m8!4m7!1m0!1m5!1m1!1s0xc4096cd375e4c51
+                :0x49f99925c6d5640d!2m2!1d-15.4995801!2d28.0304677">Dirección: Calle Castaño Bajo, 10, 35300, Santa Brígida
+              Las Palmas
+            </a>
+          </div>
+          <div class="dato-icono">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-telephone-fill" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315
+                  1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0
+                  1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634
+                  18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
+            </svg>
+            <a href="tel:928-641-276">Teléfono: 928641276</a>
+          </div>
+          <div class="dato-icono">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                 class="bi bi-envelope-at-fill" viewBox="0 0 16 16">
+              <path d="M2 2A2 2 0 0 0 .05 3.555L8 8.414l7.95-4.859A2 2 0 0 0 14 2H2Zm-2 9.8V4.698l5.803 3.546L0
+                  11.801Zm6.761-2.97-6.57 4.026A2 2 0 0 0 2 14h6.256A4.493 4.493 0 0 1 8 12.5a4.49
+                  4.49 0 0 1 1.606-3.446l-.367-.225L8 9.586l-1.239-.757ZM16 9.671V4.697l-5.803 3.546.338.208A4.482
+                  4.482 0 0 1 12.5 8c1.414 0 2.675.652 3.5 1.671Z" />
+              <path d="M15.834 12.244c0 1.168-.577 2.025-1.587 2.025-.503
+                  0-1.002-.228-1.12-.648h-.043c-.118.416-.543.643-1.015.643-.77 0-1.259-.542-1.259-1.434v-.529c0-.844.481-1.4
+                   1.26-1.4.585 0 .87.333.953.63h.03v-.568h.905v2.19c0 .272.18.42.411.42.315 0
+                   .639-.415.639-1.39v-.118c0-1.277-.95-2.326-2.484-2.326h-.04c-1.582 0-2.64 1.067-2.64 2.724v.157c0
+                   1.867 1.237 2.654 2.57 2.654h.045c.507 0 .935-.07 1.18-.18v.731c-.219.1-.643.175-1.237.175h-.044C10.438
+                   16 9 14.82 9 12.646v-.214C9 10.36 10.421 9 12.485 9h.035c2.12 0 3.314 1.43 3.314 3.034v.21Zm-4.04.21v.227c0
+                   .586.227.8.581.8.31 0 .564-.17.564-.743v-.367c0-.516-.275-.708-.572-.708-.346 0-.573.245-.573.791Z" />
+            </svg>
+            <a href="mailto:info@estacionbpsantabrigida.com">E-MAIL: info@estacionbpsantabrigida.com</a>
+          </div>
+        </div>
+  
+      </div>
+    </main>
+  
+    <app-footer></app-footer>
+  </body>
+</ion-content>
 
-    </div>
-  </main>
-
-  <app-footer></app-footer>
-</body>
 
