Ionic >> Modal Arreglado

--- a/src/app/header-log/header-log.component.html
+++ b/src/app/header-log/header-log.component.html
@@ -60,7 +60,7 @@
 
 
 <!-- Modal -->
-<div class="dark"  [ngClass]="{'show': carritoVisible}" [style.display]="carritoVisible ? 'block' : 'none'" ></div>
+<!--<div class="dark"  [ngClass]="{'show': carritoVisible}" [style.display]="carritoVisible ? 'block' : 'none'" ></div>-->
 <div id="carrito" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
      aria-hidden="true" [ngClass]="{'show': carritoVisible}" [style.display]="carritoVisible ? 'flex' : 'none'" [style.opacity]="carritoVisible ? '1' : '0'" [style.zIndex]="carritoVisible ? '100' : '-1'" [style.alignItems]="carritoVisible ? 'center' : 'unset'">
   <div class="modal-dialog">
