--- a/src/app/workshop-service/workshop-service.page.html
+++ b/src/app/workshop-service/workshop-service.page.html
@@ -68,10 +68,10 @@
               </div>
               <div class="modal-footer">
                 <div id="btn-reserve" class="btn-color">
-                  <a class="btn" onclick="$('#exampleModal2').modal('hide');">Cancelar</a>
+                  <a class="btn" data-bs-dismiss="modal">Cancelar</a>
                 </div>
                 <div id="btn-reserve" class="btn-color">
-                  <a class="btn" (click)="reservar(fecha.value, horaFecha.value, servicio.value, marca.value)" onclick="$('#exampleModal2').modal('hide');">Reservar</a>
+                  <a class="btn" (click)="reservar(fecha.value, horaFecha.value, servicio.value, marca.value)" data-bs-dismiss="modal">Reservar</a>
                 </div>
   
               </div>
